k8s/istio/virtualservice_llm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: llm-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - ext-host-gwy
  http:
  - match:
    - uri:
        prefix: /api
    - uri:
        prefix: /healthcheck
    route:
    - destination:
        host: llmservice
        port:
          number: 80
