k8s/istio/virtualservice_login.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - ext-host-gwy
  http:
  - match:
    - uri:
        prefix: /token
    rewrite:
      uri: /api/token
    route:
    - destination:
        host: loginservice
        port:
          number: 80
